# console

cpp/cpp-1-0/: meson.build
cpp/cpp-1-0/src/: MyClass.cpp  MyClass.h  main.cpp  meson.build
cpp/cpp-1-1/: meson.build
cpp/cpp-1-1/scripts/: gen_cpp.py  meson.build
cpp/cpp-1-1/src/: MyClass.cpp  MyClass.h  main.cpp  meson.build
